# dock

./: .gitignore  CMakeLists.txt  README.md  resources.qrc  yoyo-dock-list.conf
debian/: changelog  control  copyright
plugins/settings/: CMakeLists.txt  dock.cpp  dock.h  dockplugin.cpp  dockplugin.h  dockplugin.json  dockplugin.qrc
plugins/settings/qml/: main.qml
qml/: AppItem.qml  BluetoothDialog.qml  CardItem.qml  ControlCenter.qml  DockItem.qml  HorizontalDivider.qml  IconButton.qml  MprisItem.qml  ShutdownDialog.qml  StandardCard.qml  StandardItem.qml  SystemTray.qml  main.qml
src/: activity.cpp  activity.h  appearance.cpp  appearance.h  applicationitem.h  applicationmodel.cpp  applicationmodel.h  battery.cpp  battery.h  brightness.cpp  brightness.h  com.yoyo.Dock.xml  controlcenterdialog.cpp  controlcenterdialog.h  docksettings.cpp  docksettings.h  fakewindow.cpp  fakewindow.h  main.cpp  mainwindow.cpp  mainwindow.h  notifications.cpp  notifications.h  poweractions.cpp  poweractions.h  processprovider.cpp  processprovider.h  systemappitem.cpp  systemappitem.h  systemappmonitor.cpp  systemappmonitor.h  trashmanager.cpp  trashmanager.h  utils.cpp  utils.h  volume.cpp  xwindowinterface.cpp  xwindowinterface.h
src/appmenu/: appmenu.cpp  appmenuapplet.cpp  appmenuapplet.h  appmenudbus.cpp  appmenumodel.cpp  appmenumodel.h  com.yoyo.cappmenu.xml  dbusmenu_interface.cpp  dbusmenu_interface.h
src/systemtray/: statusnotifieritemsource.cpp  statusnotifieritemsource.h  statusnotifierwatcher.cpp  statusnotifierwatcher.h  systemtraymodel.cpp  systemtraymodel.h
translations/: translate_generation.sh  translate_update.sh  zh_CN.ts
